; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_pem.c_pem_get_iv.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_pem.c_pem_get_iv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MBEDTLS_ERR_PEM_INVALID_ENC_IV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @pem_get_iv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pem_get_iv(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = call i32 @memset(i8* %11, i32 0, i64 %12)
  store i64 0, i64* %8, align 8
  br label %14

14:                                               ; preds = %95, %3
  %15 = load i64, i64* %8, align 8
  %16 = load i64, i64* %7, align 8
  %17 = mul i64 %16, 2
  %18 = icmp ult i64 %15, %17
  br i1 %18, label %19, label %100

19:                                               ; preds = %14
  %20 = load i8*, i8** %5, align 8
  %21 = load i8, i8* %20, align 1
  %22 = zext i8 %21 to i32
  %23 = icmp sge i32 %22, 48
  br i1 %23, label %24, label %35

24:                                               ; preds = %19
  %25 = load i8*, i8** %5, align 8
  %26 = load i8, i8* %25, align 1
  %27 = zext i8 %26 to i32
  %28 = icmp sle i32 %27, 57
  br i1 %28, label %29, label %35

29:                                               ; preds = %24
  %30 = load i8*, i8** %5, align 8
  %31 = load i8, i8* %30, align 1
  %32 = zext i8 %31 to i32
  %33 = sub nsw i32 %32, 48
  %34 = sext i32 %33 to i64
  store i64 %34, i64* %9, align 8
  br label %71

35:                                               ; preds = %24, %19
  %36 = load i8*, i8** %5, align 8
  %37 = load i8, i8* %36, align 1
  %38 = zext i8 %37 to i32
  %39 = icmp sge i32 %38, 65
  br i1 %39, label %40, label %51

40:                                               ; preds = %35
  %41 = load i8*, i8** %5, align 8
  %42 = load i8, i8* %41, align 1
  %43 = zext i8 %42 to i32
  %44 = icmp sle i32 %43, 70
  br i1 %44, label %45, label %51

45:                                               ; preds = %40
  %46 = load i8*, i8** %5, align 8
  %47 = load i8, i8* %46, align 1
  %48 = zext i8 %47 to i32
  %49 = sub nsw i32 %48, 55
  %50 = sext i32 %49 to i64
  store i64 %50, i64* %9, align 8
  br label %70

51:                                               ; preds = %40, %35
  %52 = load i8*, i8** %5, align 8
  %53 = load i8, i8* %52, align 1
  %54 = zext i8 %53 to i32
  %55 = icmp sge i32 %54, 97
  br i1 %55, label %56, label %67

56:                                               ; preds = %51
  %57 = load i8*, i8** %5, align 8
  %58 = load i8, i8* %57, align 1
  %59 = zext i8 %58 to i32
  %60 = icmp sle i32 %59, 102
  br i1 %60, label %61, label %67

61:                                               ; preds = %56
  %62 = load i8*, i8** %5, align 8
  %63 = load i8, i8* %62, align 1
  %64 = zext i8 %63 to i32
  %65 = sub nsw i32 %64, 87
  %66 = sext i32 %65 to i64
  store i64 %66, i64* %9, align 8
  br label %69

67:                                               ; preds = %56, %51
  %68 = load i32, i32* @MBEDTLS_ERR_PEM_INVALID_ENC_IV, align 4
  store i32 %68, i32* %4, align 4
  br label %101

69:                                               ; preds = %61
  br label %70

70:                                               ; preds = %69, %45
  br label %71

71:                                               ; preds = %70, %29
  %72 = load i64, i64* %8, align 8
  %73 = and i64 %72, 1
  %74 = icmp ne i64 %73, 0
  br i1 %74, label %75, label %77

75:                                               ; preds = %71
  %76 = load i64, i64* %9, align 8
  br label %80

77:                                               ; preds = %71
  %78 = load i64, i64* %9, align 8
  %79 = shl i64 %78, 4
  br label %80

80:                                               ; preds = %77, %75
  %81 = phi i64 [ %76, %75 ], [ %79, %77 ]
  store i64 %81, i64* %10, align 8
  %82 = load i8*, i8** %6, align 8
  %83 = load i64, i64* %8, align 8
  %84 = lshr i64 %83, 1
  %85 = getelementptr inbounds i8, i8* %82, i64 %84
  %86 = load i8, i8* %85, align 1
  %87 = zext i8 %86 to i64
  %88 = load i64, i64* %10, align 8
  %89 = or i64 %87, %88
  %90 = trunc i64 %89 to i8
  %91 = load i8*, i8** %6, align 8
  %92 = load i64, i64* %8, align 8
  %93 = lshr i64 %92, 1
  %94 = getelementptr inbounds i8, i8* %91, i64 %93
  store i8 %90, i8* %94, align 1
  br label %95

95:                                               ; preds = %80
  %96 = load i64, i64* %8, align 8
  %97 = add i64 %96, 1
  store i64 %97, i64* %8, align 8
  %98 = load i8*, i8** %5, align 8
  %99 = getelementptr inbounds i8, i8* %98, i32 1
  store i8* %99, i8** %5, align 8
  br label %14

100:                                              ; preds = %14
  store i32 0, i32* %4, align 4
  br label %101

101:                                              ; preds = %100, %67
  %102 = load i32, i32* %4, align 4
  ret i32 %102
}

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
